--- a/personalinform/personalinfo.html
+++ b/personalinform/personalinfo.html
@@ -18,10 +18,10 @@
 	                  <tr>
 		              <td style="background-color: #eeeeee  ;">ログインID</td>
 		              <td style="background-color: #ffffff  ;">
-		  <input type="text" name="login_id" value="<?php echo htmlspecialchars($_REQUEST['login_id']); ?>" size="30">
+		  <input type="text" name="login_id" size="30">
 		              <td style="background-color: #eeeeee  ;">ログインパスワード</td>
 		              <td style="background-color: #ffffff  ;">
-		  <input type="text" name="login_pass" value="<?php echo htmlspecialchars($_REQUEST['login_pass']); ?>" size="30">
+		  <input type="text" name="login_pass" size="30">
 		              <!--<td style="background-color: #eeeeee  ;">ログインID</td>
 		              <td style="background-color: #ffffff  ;">
 		  <input type="text" name="name" value="<?php echo htmlspecialchars($_REQUEST['name']); ?>" size="30">
