--- a/admin.html
+++ b/admin.html
@@ -1,5 +1,5 @@
 <HTML>
-<FORM action="" method="post">
+<FORM action="admin.php" method="post">
   楽天　スノーボードレンタルサイト　登録用
   <br>
 会社名<input type = "text" name ="company";>
