--- a/personalinform/personalinfo.html
+++ b/personalinform/personalinfo.html
@@ -17,12 +17,14 @@
 	              <table width="100%" border=0 cellspacing=1 cellpadding=5 style="font-size: 12px;">
 	                  <tr>
 		              <td style="background-color: #eeeeee  ;">ログインID</td>
-		              <td style="background-color: #ffffff  ;">
-		  <input type="text" name="login_id" size="30">
+		              <td style="background-color: #ffffff  ;"></td>  
+		<input type="text" name="login_id" size="30">
+	      </tr>
+	      <tr>
 		              <td style="background-color: #eeeeee  ;">ログインパスワード</td>
 		              <td style="background-color: #ffffff  ;">
 		  <input type="text" name="login_pass" size="30">
-		              <!--<td style="background-color: #eeeeee  ;">ログインID</td>
+		               <!--<td style="background-color: #eeeeee  ;">ログインID</td>
 		              <td style="background-color: #ffffff  ;">
 		  <input type="text" name="name" value="<?php echo htmlspecialchars($_REQUEST['name']); ?>" size="30">
 		  <input type="text" name="height" value="<?php echo htmlspecialchars($_REQUEST['height']); ?>" size="30">
