--- a/personalinform/personalinfo.html
+++ b/personalinform/personalinfo.html
@@ -17,8 +17,8 @@
 	              <table width="100%" border=0 cellspacing=1 cellpadding=5 style="font-size: 12px;">
 	                  <tr>
 		              <td style="background-color: #eeeeee  ;">ログインID</td>
-		              <td style="background-color: #ffffff  ;"></td>  
-		<input type="text" name="login_id" size="30">
+		              <td style="background-color: #ffffff  ;">
+		<input type="text" name="login_id" size="30"></td>
 		              <td style="background-color: #eeeeee  ;">ログインパスワード</td>
 		              <td style="background-color: #ffffff  ;">
 		  <input type="text" name="login_pass" size="30">
