--- a/admin.html
+++ b/admin.html
@@ -1,6 +1,6 @@
 <HTML>
 <FORM action="admin.php" method="post">
-  楽天　スノーボードレンタルサイト　登録用
+  <title>楽天　スノーボードレンタルサイト　登録用</title>
   <br>
 会社名<input type = "text" name ="company";>
 <br>
