--- a/login.html
+++ b/login.html
@@ -1,6 +1,6 @@
 <HTML>
 <FORM action="confirm.php" method="post">
-  楽天　スノーボードレンタルサイト　ログイン
+  <title>楽天　スノーボードレンタルサイト　ログイン</title>
   <br>
 ID<input type = "text" name ="id";>
 <br>
