--- a/personalinform/personalinfo.html
+++ b/personalinform/personalinfo.html
@@ -11,17 +11,17 @@
 
     <!-- HTMLフォーム表示 -->
     <form action="./personalinfo.php" method="post">
-      <table width="100%" border="0" cellspacing="0" cellpadding="0" style="margin: 5px 0pt 0pt 0px;">
+      <table width="100%" border="0" cellspacing="0" cellpadding="0" style="margin: 2px 0pt 0pt 0px;">
 	      <tr>
 	          <td bgcolor="#afafaf  ">
 	              <table width="100%" border=0 cellspacing=1 cellpadding=5 style="font-size: 12px;">
 	                  <tr>
-		              <td style="background-color: #eeeeee  ;">ログインID</td>
+		              <td style="background-color: #eeeeee  ;">身長</td>
 		              <td style="background-color: #ffffff  ;">
 		  <input type="text" name="login_id" size="30"></td>
 	      </tr>
 	      <tr>
-		              <td style="background-color: #eeeeee  ;">ログインパスワード</td>
+		              <td style="background-color: #eeeeee  ;">体重</td>
 		              <td style="background-color: #ffffff  ;">
 		  <input type="text" name="login_pass" size="30">
 		               <!--<td style="background-color: #eeeeee  ;">ログインID</td>
