--- a/personalinform/personalinfo.html
+++ b/personalinform/personalinfo.html
@@ -13,7 +13,7 @@
     <form action="./personalinfo.php" method="post">
       <table width="100%" border="0" cellspacing="0" cellpadding="0" style="margin: 2px 0pt 0pt 0px;">
 	      <tr>
-	          <td bgcolor="#afafaf  ">
+	          <td bgcolor="#e3f0fb  ">
 	              <table width="100%" border=0 cellspacing=1 cellpadding=5 style="font-size: 12px;">
 	                  <tr>
 		              <td style="background-color: #eeeeee  ;">身長</td>
@@ -24,14 +24,14 @@
 		              <td style="background-color: #eeeeee  ;">体重</td>
 		              <td style="background-color: #ffffff  ;">
 		  <input type="text" name="login_pass" size="30">
-		               <!--<td style="background-color: #eeeeee  ;">ログインID</td>
-		              <td style="background-color: #ffffff  ;">
-		  <input type="text" name="name" value="<?php echo htmlspecialchars($_REQUEST['name']); ?>" size="30">
-		  <input type="text" name="height" value="<?php echo htmlspecialchars($_REQUEST['height']); ?>" size="30">
-		  <input type="text" name="weight" value="<?php echo htmlspecialchars($_REQUEST['weight']); ?>" size="30">
-		  <input type="text" name="show_size" value="<?php echo htmlspecialchars($_REQUEST['shoe_size']); ?>" size="30">-->
+		    
 		</td>
 	                  </tr>
+	      <tr>
+		              <td style="background-color: #eeeeee  ;">身長</td>
+		              <td style="background-color: #ffffff  ;">
+		  <input type="text" name="login_id" size="30"></td>
+	      </tr>
 	              </table>
 	          </td>
 	      </tr>
