--- a/personalinform/personalinfo.html
+++ b/personalinform/personalinfo.html
@@ -13,24 +13,24 @@
     <form action="./personalinfo.php" method="post">
       <table width="100%" border="0" cellspacing="0" cellpadding="0" style="margin: 2px 0pt 0pt 0px;">
 	      <tr>
-	          <td bgcolor="#e3f0fb  ">
+	          <td bgcolor="#008b8b  ">
 	              <table width="100%" border=0 cellspacing=1 cellpadding=5 style="font-size: 12px;">
 	                  <tr>
-		              <td style="background-color: #eeeeee  ;">身長</td>
+		              <td style="background-color: #87cefa  ;">身長</td>
 		              <td style="background-color: #ffffff  ;">
 		  <input type="text" name="login_id" size="30"></td>
 	      </tr>
 	      <tr>
-		              <td style="background-color: #eeeeee  ;">体重</td>
+		              <td style="background-color: #87cefa  ;">体重</td>
 		              <td style="background-color: #ffffff  ;">
 		  <input type="text" name="login_pass" size="30">
 		    
 		</td>
 	                  </tr>
 	      <tr>
-		              <td style="background-color: #eeeeee  ;">身長</td>
+		              <td style="background-color: #87cefa  ;">足の大きさ</td>
 		              <td style="background-color: #ffffff  ;">
-		  <input type="text" name="login_id" size="30"></td>
+		  <input type="text" name="foot_size" size="30"></td>
 	      </tr>
 	              </table>
 	          </td>
