--- a/personalinform/personalinfo.html
+++ b/personalinform/personalinfo.html
@@ -1,7 +1,7 @@
 <html lang = "ja">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>個人情報入力ページ</title>
+    <title bgcolor="ffa500 ">個人情報入力ページ</title>
   </head>
 
   <body bgcolor="#ffffff  " TEXT="#333333  " LINK="#3333cc  ">
