--- a/adminc.html
+++ b/adminc.html
@@ -1,6 +1,7 @@
 <HTML>
-<FORM action="admin.php" method="post">
+<FORM action="adminc.php" method="post">
   <title>楽天　スノーボードレンタルサイト　登録用</title>
+  <b>楽天　スノーボードレンタルサイト　登録用(会社)</b>
   <br>
 会社名<input type = "text" name ="company";>
 <br>
