--- a/loginc.html
+++ b/loginc.html
@@ -1,6 +1,7 @@
 <HTML>
 <FORM action="confirm.php" method="post">
   <title>楽天　スノーボードレンタルサイト　ログイン</title>
+  <b>楽天　スノーボードレンタルサイト　ログイン</b>
   <br>
 ID<input type = "text" name ="id";>
 <br>
