--- a/personalinform/personalinfo.html
+++ b/personalinform/personalinfo.html
@@ -1,14 +1,16 @@
 <html lang = "ja">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title bgcolor="ffa500 ">個人情報入力ページ</title>
+    <title>個人情報入力ページ</title>
   </head>
 
-  <body bgcolor="#ffffff  " TEXT="#333333  " LINK="#3333cc  ">
+  <body bgcolor="#fffacd  " TEXT="#333333  " LINK="#3333cc  ">
     <!-- タイトル -->
     <h1 style = "font-size: 16px; font-weight: bold;">個人情報入力ページ</h1>
     <!-- タイトル -->
 
+以下の欄に入力することで、お客様それぞれに合わせたサイズの用具を借りることが出来ます。
+    
     <!-- HTMLフォーム表示 -->
     <form action="./personalinfo.php" method="post">
       <table width="100%" border="0" cellspacing="0" cellpadding="0" style="margin: 2px 0pt 0pt 0px;">
