--- a/personalinform/personalinfo.html
+++ b/personalinform/personalinfo.html
@@ -16,7 +16,7 @@
       <table width="100%" border="0" cellspacing="0" cellpadding="0" style="margin: 2px 0pt 0pt 0px;">
 	      <tr>
 	          <td bgcolor="#008b8b  ">
-	              <table width="100%" border=0 cellspacing=1 cellpadding=5 style="font-size: 12px;">
+	              <table width="100%" border=0 cellspacing=1 cellpadding=5 style="font-size: 20px;">
 	                  <tr>
 		              <td style="background-color: #87cefa  ;">身長</td>
 		              <td style="background-color: #ffffff  ;">
@@ -38,7 +38,9 @@
 	          </td>
 	      </tr>
           </table>
-      <br> <input type="submit" name="submit" value="登録">
+      <Div Align="left">
+	<br> <input type="submit" name="submit" value="登録">
+	</Div>
       </form>
     <!-- HTMLフォーム表示 -->
     
