--- a/adminp.html
+++ b/adminp.html
@@ -1,5 +1,5 @@
 <HTML>
-<FORM action="admin.php" method="post">
+<FORM action="adminp.php" method="post">
   <title>楽天　スノーボードレンタルサイト　登録用</title>
   <b>楽天　スノーボードレンタルサイト　登録用(個人)</b>
   <br>
@@ -9,6 +9,7 @@ ID<input type = "text" name ="id";>
 <br>
 password<input type = "text" name ="password";>
 <br>
+e-mail<input type = "text" name ="email";>
 <input type ="submit" name ="to-roku" value="登録";>
 </FORM>
 </HTML>
