--- a/personalinform/personalinfo.html
+++ b/personalinform/personalinfo.html
@@ -38,9 +38,10 @@
 	          </td>
 	      </tr>
           </table>
-      <Div Align="left">
+      <Div="center">
 	<br> <input type="submit" name="submit" value="登録">
-	</Div>
+</Div>
+
       </form>
     <!-- HTMLフォーム表示 -->
     
