--- a/personalinform/personalinfo.html
+++ b/personalinform/personalinfo.html
@@ -39,7 +39,7 @@
 	      </tr>
           </table>
       <Div="center">
-	<br> <input type="submit" name="submit" value="登録">
+	<input type="submit" name="submit" value="登録">
 </Div>
 
       </form>
