--- a/personalinform/personalinfo.html
+++ b/personalinform/personalinfo.html
@@ -3,13 +3,13 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>個人情報入力ページ</title>
   </head>
-
+  
   <body bgcolor="#fffacd  " TEXT="#333333  " LINK="#3333cc  ">
     <!-- タイトル -->
     <h1 style = "font-size: 16px; font-weight: bold;">個人情報入力ページ</h1>
     <!-- タイトル -->
 
-以下の欄に入力することで、お客様それぞれに合わせたサイズの用具を借りることが出来ます。
+    以下の欄に入力することで、お客様それぞれに合わせたサイズの用具を借りることが出来ます。
     
     <!-- HTMLフォーム表示 -->
     <form action="./personalinfo.php" method="post">
@@ -38,10 +38,9 @@
 	          </td>
 	      </tr>
           </table>
-      <Div="center">
-	<input type="submit" name="submit" value="登録">
-</Div>
-
+      <div style="margin-left:10%;margin-right:10%">
+	<input type="submit" name="submit" value="更新">
+      </div>
       </form>
     <!-- HTMLフォーム表示 -->
     
