--- a/personalinform/personalinfo.html
+++ b/personalinform/personalinfo.html
@@ -17,23 +17,76 @@
 	      <tr>
 	          <td bgcolor="#008b8b  ">
 	              <table width="100%" border=0 cellspacing=1 cellpadding=5 style="font-size: 20px;">
-	                  <tr>
-		              <td style="background-color: #87cefa  ;">身長</td>
+	      	                  <tr>
+		              <td style="background-color: #87cefa  ;">ログインID</td>
 		              <td style="background-color: #ffffff  ;">
 		  <input type="text" name="login_id" size="30"></td>
+		      </tr>
+		                  <tr>
+		              <td style="background-color: #87cefa  ;">ログインパスワード</td>
+		              <td style="background-color: #ffffff  ;">
+		  <input type="text" name="login_pass" size="30"></td>
+		      </tr>
+		      
+		                  <tr>
+		              <td style="background-color: #87cefa  ;">身長</td>
+		              <td style="background-color: #ffffff  ;">
+		  <input type="text" name="height" size="30"></td>
 	      </tr>
 	      <tr>
 		              <td style="background-color: #87cefa  ;">体重</td>
 		              <td style="background-color: #ffffff  ;">
-		  <input type="text" name="login_pass" size="30">
+		  <input type="text" name="weight" size="30">
 		    
 		</td>
 	                  </tr>
-	      <tr>
-		              <td style="background-color: #87cefa  ;">足の大きさ</td>
+	      	      <tr>
+		              <td style="background-color: #87cefa  ;">靴のサイズ</td>
 		              <td style="background-color: #ffffff  ;">
-		  <input type="text" name="foot_size" size="30"></td>
+		  <input type="text" name="shoe_size" size="30">
+		    
+		</td>
+	                  </tr>
+
+		      <tr>
+		              <td style="background-color: #87cefa  ;">小物</td>
+		              <td style="background-color: #ffffff  ;">
+		  <input type="radio" name="accessory" value="あり" size="30"></td>
 	      </tr>
+	      <tr>
+		              <td style="background-color: #87cefa  ;">小物</td>
+		              <td style="background-color: #ffffff  ;">
+		  <input type="radio" name="accessory" value="ない" size="30"></td>
+	      </tr>
+	      <tr>
+		              <td style="background-color: #87cefa  ;">ウェア</td>
+		              <td style="background-color: #ffffff  ;">
+		  <input type="radio" name="wear" value="あり" size="30"></td>
+	      </tr>
+
+		      <tr>
+		              <td style="background-color: #87cefa  ;">ウェア</td>
+		              <td style="background-color: #ffffff  ;">
+		  <input type="radio" name="wear" value="ない" size="30"></td>
+	      </tr>
+	      <tr>
+		              <td style="background-color: #87cefa  ;">ボード</td>
+		              <td style="background-color: #ffffff  ;">
+		  <input type="radio" name="board" value="あり" size="30"></td>
+	      </tr>
+
+		      <tr>
+		              <td style="background-color: #87cefa  ;">ボード</td>
+		              <td style="background-color: #ffffff  ;">
+		  <input type="radio" name="board" value="ない" size="30"></td>
+	      </tr>
+	      <tr>
+		              <td style="background-color: #87cefa  ;">email</td>
+		              <td style="background-color: #ffffff  ;">
+		  <input type="text" name="email" size="30"></td>
+	      </tr>
+
+
 	              </table>
 	          </td>
 	      </tr>
