--- a/personalinform/personalinfo.html
+++ b/personalinform/personalinfo.html
@@ -51,34 +51,20 @@
 		      <tr>
 		              <td style="background-color: #87cefa  ;">小物</td>
 		              <td style="background-color: #ffffff  ;">
-		  <input type="radio" name="accessory" value="あり" size="30"></td>
-	      </tr>
-	      <tr>
-		              <td style="background-color: #87cefa  ;">小物</td>
-		              <td style="background-color: #ffffff  ;">
-		  <input type="radio" name="accessory" value="ない" size="30"></td>
+		  <input type="radio" name="accessory" value="true" size="30" /> あり</td>
+		  <input type="radio" name="accessory" value="false" size="30"/> なし</td>
 	      </tr>
 	      <tr>
 		              <td style="background-color: #87cefa  ;">ウェア</td>
 		              <td style="background-color: #ffffff  ;">
-		  <input type="radio" name="wear" value="あり" size="30"></td>
-	      </tr>
-
-		      <tr>
-		              <td style="background-color: #87cefa  ;">ウェア</td>
-		              <td style="background-color: #ffffff  ;">
-		  <input type="radio" name="wear" value="ない" size="30"></td>
-	      </tr>
+		  <input type="radio" name="wear" value="true" size="30" />あり</td>
+		<input type="radio" name="wear" value="false" size="30" />なし</td>
+</tr>
 	      <tr>
 		              <td style="background-color: #87cefa  ;">ボード</td>
 		              <td style="background-color: #ffffff  ;">
-		  <input type="radio" name="board" value="あり" size="30"></td>
-	      </tr>
-
-		      <tr>
-		              <td style="background-color: #87cefa  ;">ボード</td>
-		              <td style="background-color: #ffffff  ;">
-		  <input type="radio" name="board" value="ない" size="30"></td>
+		  <input type="radio" name="board" value="true" size="30" />あり</td>
+		<input type="radio" name="board" value="false" size="30" />なし</td>
 	      </tr>
 	      <tr>
 		              <td style="background-color: #87cefa  ;">email</td>
