--- a/personalinform/personalinfo.html
+++ b/personalinform/personalinfo.html
@@ -20,7 +20,7 @@
 	      	                  <tr>
 		              <td style="background-color: #87cefa  ;">ログインID</td>
 		              <td style="background-color: #ffffff  ;">
-		  <input type="text" name="login_id" size="30"></td>
+		  <input type="text" name="login_ID" size="30"></td>
 		      </tr>
 		                  <tr>
 		              <td style="background-color: #87cefa  ;">ログインパスワード</td>
@@ -51,19 +51,19 @@
 		      <tr>
 		              <td style="background-color: #87cefa  ;">小物</td>
 		              <td style="background-color: #ffffff  ;">
-		  <input type="radio" name="accessory" value="true" size="30" /> あり</td>
+		  <input type="radio" name="accessory" value="true" size="30" /> あり
 		  <input type="radio" name="accessory" value="false" size="30"/> なし</td>
 	      </tr>
 	      <tr>
 		              <td style="background-color: #87cefa  ;">ウェア</td>
 		              <td style="background-color: #ffffff  ;">
-		  <input type="radio" name="wear" value="true" size="30" />あり</td>
+		  <input type="radio" name="wear" value="true" size="30" />あり
 		<input type="radio" name="wear" value="false" size="30" />なし</td>
 </tr>
 	      <tr>
 		              <td style="background-color: #87cefa  ;">ボード</td>
 		              <td style="background-color: #ffffff  ;">
-		  <input type="radio" name="board" value="true" size="30" />あり</td>
+		  <input type="radio" name="board" value="true" size="30" />あり
 		<input type="radio" name="board" value="false" size="30" />なし</td>
 	      </tr>
 	      <tr>
