--- a/adminc.html
+++ b/adminc.html
@@ -3,13 +3,13 @@
   <title>楽天　スノーボードレンタルサイト　登録用</title>
   <b>楽天　スノーボードレンタルサイト　登録用(会社)</b>
   <br>
-会社名<input type = "text" name ="company";>
+会社名<input type = "text" name ="name";>
 <br>
 ID<input type = "text" name ="id";>
 <br>
 password<input type = "text" name ="password";>
 <br>
-責任者名<input type = "text" name ="name";>
+責任者名<input type = "text" name ="charge";>
 <br>
 住所<input type = "text" name ="address";>
 <br>
