--- a/loginp.html
+++ b/loginp.html
@@ -1,5 +1,5 @@
 <HTML>
-<FORM action="confirmc.php" method="post">
+<FORM action="confirmp.php" method="post">
   <title>楽天　スノーボードレンタルサイト　ログイン</title>
   <b>楽天　スノーボードレンタルサイト　ログイン</b>
   <br>
