--- a/adminc.html
+++ b/adminc.html
@@ -11,6 +11,8 @@ password<input type = "text" name ="password";>
 <br>
 責任者名<input type = "text" name ="charge";>
 <br>
+メール<input type = "text" name ="mail";>
+<br>
 住所<input type = "text" name ="address";>
 <br>
 TEL<input type = "text" name ="tel";>
