--- a/adminc.html
+++ b/adminc.html
@@ -15,9 +15,9 @@ password<input type = "text" name ="password";>
 <br>
 住所<input type = "text" name ="address";>
 <br>
-TEL<input type = "number" name ="tel";>
+TEL<input type = "text" name ="tel";>
 <br>
-スキー場<input type = "number" name ="ski";>
+スキー場<input type = "number" min="1" max = "47" name ="ski";>
 <br>
 <input type ="submit" name ="to-roku" value="登録";>
 </FORM>
