--- a/mail/advertising.html
+++ b/mail/advertising.html
@@ -1,14 +1,28 @@
 <html lang = "ja">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title> 楽天レンタルページ</title>
+    <title> 楽天レンタルとは</title>
   </head>
   
   <body bgcolor="#fffacd  " TEXT="#333333  " LINK="#3333cc  ">
     <!-- タイトル -->
-    <h1 style = "font-size: 16px; font-weight: bold;">楽天レンタルページ</h1>
+    <h1 style = "font-size: 16px; font-weight: bold;">楽天レンタル</h1>
     <!-- タイトル -->
+    楽天レンタルとは、あらかじめレンタルしたい用具をレンタル店に注文することで、現地に着いてすぐに用具を借りることのできるサービスです。</br>
+    会員登録後に身長などの個人情報をレンタル用具と合わせて入力する事で、ウェアやボードなどのサイズをレンタル店が事前に把握、準備する事ができます。</br>
+    個人情報は入力した本人しか見られる事はなく、レンタル店には個人情報を基にしたサイズの情報のみが送られます。</br>
+    是非利用してみて下さい。
+    
+    <frameset cols="50%,*">
+      <frame src="member.html">
+      <frame src="login.html">
 
-    <frameset cols="20%,*">
+      <noframes>
+	<body>
+	  <p>フレームの代替内容</p>
+	</body>
+      </noframes>
+    </frameset>
+    
   </body>
 </html>
