--- a/mail/advertising.html
+++ b/mail/advertising.html
@@ -13,16 +13,15 @@
     個人情報は入力した本人しか見られる事はなく、レンタル店には個人情報を基にしたサイズの情報のみが送られます。</br>
     是非利用してみて下さい。
     
-    <frameset cols="50%,*">
-      <frame src="member.html">
-      <frame src="login.html">
-
-      <noframes>
-	<body>
-	  <p>フレームの代替内容</p>
-	</body>
-      </noframes>
-    </frameset>
-    
+    <table>
+      <tr>
+	<td>新規登録の方はこちらから</td>
+	<td><a href="会員登録ページ">会員登録</a></td>
+      </tr>
+      <tr>
+	<td>既に会員の方はこちらから</td>
+	<td>    <a href="ログインページ">ログインページ</a></td>
+      </tr>
+    </table>
   </body>
 </html>
