--- a/mail/advertising.html
+++ b/mail/advertising.html
@@ -6,13 +6,16 @@
   
   <body bgcolor="#fffacd  " TEXT="#333333  " LINK="#3333cc  ">
     <!-- タイトル -->
-    <h1 style = "font-size: 16px; font-weight: bold;">楽天レンタル</h1>
+    <h1 style = "font-size: 25px; font-weight: bold;">楽天レンタル</h1>
     <!-- タイトル -->
-    楽天レンタルとは、あらかじめレンタルしたい用具をレンタル店に注文することで、現地に着いてすぐに用具を借りることのできるサービスです。</br>
+    <h2>楽天レンタルとは</h2>
+    あらかじめレンタルしたい用具をレンタル店に注文することで、現地に着いてすぐに用具を借りることのできるサービスです。</br>
     会員登録後に身長などの個人情報をレンタル用具と合わせて入力する事で、ウェアやボードなどのサイズをレンタル店が事前に把握、準備する事ができます。</br>
     個人情報は入力した本人しか見られる事はなく、レンタル店には個人情報を基にしたサイズの情報のみが送られます。</br>
     是非利用してみて下さい。
-    
+
+    <h2>レンタルを利用するには</h2>
+    以下のサイトより必要事項の記入を行ってください。
     <table>
       <tr>
 	<td>新規登録の方はこちらから</td>
