--- a/mail/advertising.html
+++ b/mail/advertising.html
@@ -8,8 +8,10 @@
     <!-- タイトル -->
     <h1 style = "font-size: 25px; font-weight: bold;">楽天レンタル</h1>
     <!-- タイトル -->
-    <h2>楽天レンタルとは</h2>
-    あらかじめレンタルしたい用具をレンタル店に注文することで、現地に着いてすぐに用具を借りることのできるサービスです。</br>
+    <FONT color="#4169e1">
+    <h2 >楽天レンタルとは、あらかじめレンタルしたい用具をレンタル店に注文することで</h2>
+    <h2>現地に着いてすぐに用具を借りることのできるサービスです。</h2>
+    </FONT>
     会員登録後に身長などの個人情報をレンタル用具と合わせて入力する事で、ウェアやボードなどのサイズをレンタル店が事前に把握、準備する事ができます。</br>
     個人情報は入力した本人しか見られる事はなく、レンタル店には個人情報を基にしたサイズの情報のみが送られます。</br>
     是非利用してみて下さい。
