--- a/mail/advertising.html
+++ b/mail/advertising.html
@@ -1,5 +1,5 @@
 <html lang = "ja">
-  <head>
+0;95;c  <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title> 楽天レンタルとは</title>
   </head>
@@ -14,17 +14,17 @@
     </FONT>
     会員登録後に身長などの個人情報をレンタル用具と合わせて入力する事で、ウェアやボードなどのサイズをレンタル店が事前に把握、準備する事ができます。</br>
     個人情報は入力した本人しか見られる事はなく、レンタル店には個人情報を基にしたサイズの情報のみが送られます。</br>
-    是非利用してみて下さい。
-
-    <h2>レンタルを利用するには</h2>
-    以下のサイトより必要事項の記入を行ってください。
+    <font color="66cdaa">
+    <h2 style = "font-size: 19px; font-weight: bold;">レンタルを利用するにはこちらから</h2>
+    </font>
+    以下のサイトより必要事項の記入を行ってください。<br>
     <table>
       <tr>
-	<td>新規登録の方はこちらから</td>
+	<th bgcolor="ff69b4"><font color="e6e6fa">新規登録の方はこちらから</font></th>
 	<td><a href="会員登録ページ">会員登録</a></td>
       </tr>
       <tr>
-	<td>既に会員の方はこちらから</td>
+	<th bgcolor="ff69b4"><font color="e6e6fa">既に会員の方はこちらから</font></th>
 	<td>    <a href="ログインページ">ログインページ</a></td>
       </tr>
     </table>
