--- a/mail/advertising.html
+++ b/mail/advertising.html
@@ -1,7 +1,9 @@
 <html lang = "ja">
-0;95;c  <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title> 楽天レンタルとは</title>
+<head>
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <font color="00ffff">
+    <title style = "font-size: 30px; font-weight: bold;"> 楽天レンタルとは</title>
+  </font>
   </head>
   
   <body bgcolor="#fffacd  " TEXT="#333333  " LINK="#3333cc  ">
@@ -20,12 +22,12 @@
     以下のサイトより必要事項の記入を行ってください。<br>
     <table>
       <tr>
-	<th bgcolor="ff69b4"><font color="e6e6fa">新規登録の方はこちらから</font></th>
-	<td><a href="会員登録ページ">会員登録</a></td>
+	<th bgcolor="dc143c"><font color="e6e6fa">新規登録の方はこちらから</font></th>
+	<td bgcolor="ffd700"><a href="会員登録ページ">会員登録</a></td>
       </tr>
       <tr>
-	<th bgcolor="ff69b4"><font color="e6e6fa">既に会員の方はこちらから</font></th>
-	<td>    <a href="ログインページ">ログインページ</a></td>
+	<th bgcolor="dc143c"><font color="e6e6fa">既に会員の方はこちらから</font></th>
+	<td bgcolor="ffd700"><a href="ログインページ">ログインページ</a></td>
       </tr>
     </table>
   </body>
