--- a/mail/advertising.html
+++ b/mail/advertising.html
@@ -1,9 +1,9 @@
 <html lang = "ja">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <font color="00ffff">
+  <!--<font color="00ffff">
     <title style = "font-size: 30px; font-weight: bold;"> 楽天レンタルとは</title>
-  </font>
+  </font>-->
   </head>
   
   <body bgcolor="#fffacd  " TEXT="#333333  " LINK="#3333cc  ">
@@ -17,7 +17,7 @@
     会員登録後に身長などの個人情報をレンタル用具と合わせて入力する事で、ウェアやボードなどのサイズをレンタル店が事前に把握、準備する事ができます。</br>
     個人情報は入力した本人しか見られる事はなく、レンタル店には個人情報を基にしたサイズの情報のみが送られます。</br>
     <font color="66cdaa">
-    <h2 style = "font-size: 19px; font-weight: bold;">レンタルを利用するにはこちらから</h2>
+    <h2 style = "font-size: 19px; font-weight: bold;">レンタルを利用するには</h2>
     </font>
     以下のサイトより必要事項の記入を行ってください。<br>
     <table>
