--- a/mail/advertising.html
+++ b/mail/advertising.html
@@ -1,14 +1,16 @@
 <html lang = "ja">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <!--<font color="00ffff">
+
     <title style = "font-size: 30px; font-weight: bold;"> 楽天レンタルとは</title>
-  </font>-->
   </head>
   
   <body bgcolor="#fffacd  " TEXT="#333333  " LINK="#3333cc  ">
     <!-- タイトル -->
-    <h1 style = "font-size: 25px; font-weight: bold;">楽天レンタル</h1>
+    <font color="00ffff">    
+      <h1 style = "font-size: 25px; font-weight: bold;">楽天レンタル</h1>
+    </font>
+    
     <!-- タイトル -->
     <FONT color="#4169e1">
     <h2 >楽天レンタルとは、あらかじめレンタルしたい用具をレンタル店に注文することで</h2>
