--- a/mail/advertising.html
+++ b/mail/advertising.html
@@ -7,7 +7,7 @@
   
   <body bgcolor="#fffacd  " TEXT="#333333  " LINK="#3333cc  ">
     <!-- タイトル -->
-    <font color="00ffff">    
+    <font color="afeeee">    
       <h1 style = "font-size: 25px; font-weight: bold;">楽天レンタル</h1>
     </font>
     
@@ -16,8 +16,10 @@
     <h2 >楽天レンタルとは、あらかじめレンタルしたい用具をレンタル店に注文することで</h2>
     <h2>現地に着いてすぐに用具を借りることのできるサービスです。</h2>
     </FONT>
+    <div style="padding: 10px; margin-bottom: 10px; border: 1px solid #333333; background-color: #ffff99;">
     会員登録後に身長などの個人情報をレンタル用具と合わせて入力する事で、ウェアやボードなどのサイズをレンタル店が事前に把握、準備する事ができます。</br>
     個人情報は入力した本人しか見られる事はなく、レンタル店には個人情報を基にしたサイズの情報のみが送られます。</br>
+    </div>
     <font color="66cdaa">
     <h2 style = "font-size: 19px; font-weight: bold;">レンタルを利用するには</h2>
     </font>
