--- a/register/loginc.html
+++ b/register/loginc.html
@@ -1,7 +1,7 @@
 <HTML>
 <FORM action="confirmc.php" method="post">
   <title>楽天　スノーボードレンタルサイト　ログイン</title>
-  <b>楽天　スノーボードレンタルサイト　ログイン</b>
+  <b>楽天　スノーボードレンタルサイト　ログイン（会社）</b>
   <br>
 ID<input type = "text" name ="id";>
 <br>
