--- a/register/loginp.html
+++ b/register/loginp.html
@@ -1,7 +1,7 @@
 <HTML>
 <FORM action="confirmp.php" method="post">
   <title>楽天　スノーボードレンタルサイト　ログイン</title>
-  <b>楽天　スノーボードレンタルサイト　ログイン</b>
+  <b>楽天　スノーボードレンタルサイト　ログイン（個人）</b>
   <br>
 ID<input type = "text" name ="id";>
 <br>
