--- a/mail/mailform.html
+++ b/mail/mailform.html
@@ -9,7 +9,7 @@
     <h1 style = "font-size: 16px; font-weight: bold;">招待ページ</h1>
     <!-- タイトル -->
 
-    <form action="./mailform.php" method="post">
+    <form action="./mailing.php" method="post">
       招待する人のURLを入力して下さい。
       <table width="60%" border="0" cellspacing="0" cellpadding="0" style="margin: 2px 0pt 0pt 0px;">
 	      <tr>
