--- a/mail/mailform.html
+++ b/mail/mailform.html
@@ -16,12 +16,12 @@
 	          <td bgcolor="#afafaf  ">
 	              <table width="100%" border=0 cellspacing=1 cellpadding=5 style="font-size: 12px;">
 	                  <tr>
-		              <td style="background-color: #eeeeee  ;">招待するメールアドレス(最大3つ)</td>
+		              <td style="background-color: #eeeeee  ;">招待するメールアドレス</td>
 		              <td style="background-color: #ffffff  ;">
 		                  <input type="text" name="mail_1" size="30">
 		              </td>
 	                  </tr>
-	      <tr>
+	      <!--<tr>
 		              <td style="background-color: #eeeeee  ;"></td>
 		              <td style="background-color: #ffffff  ;">
 		                  <input type="text" name="mail_2" size="30">
@@ -32,7 +32,7 @@
 		              <td style="background-color: #ffffff  ;">
 		                  <input type="text" name="mail_3" size="30">
 		              </td>
-	                  </tr>
+	                  </tr>-->
 	              </table>
 	          </td>
 	      </tr>
@@ -48,7 +48,7 @@
 		                <input type="text" name="conf_mail_1" size="30">
 	                    </td>
 	                </tr>
-	    <tr>
+<!--	    <tr>
 	                    <td style="background-color: #eeeeee  ;"></td>
 	                    <td style="background-color: #ffffff  ;">
 		                <input type="text" name="conf_mail_2"  size="30">
@@ -59,7 +59,7 @@
 	                    <td style="background-color: #ffffff  ;">
 		                <input type="text" name="conf_mail_3"  size="30">
 	                    </td>
-	                </tr>
+	                </tr>-->
 	            </table>
 	        </td>
             </tr>
