--- a/adminp.html
+++ b/adminp.html
@@ -1,4 +1,6 @@
 <HTML>
+<head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+</head>
 <FORM action="adminp.php" method="post">
   <title>楽天　スノーボードレンタルサイト　登録用</title>
   <b>楽天　スノーボードレンタルサイト　登録用(個人)</b>
