--- a/register/adminp.html
+++ b/register/adminp.html
@@ -1,15 +1,18 @@
 <HTML>
-<FORM action="adminp.php" method="post">
-  <title>楽天　スノーボードレンタルサイト　登録用</title>
-  <b>楽天　スノーボードレンタルサイト　登録用(個人)</b>
-  <br>
-個人名<input type = "text" name ="name";>
-<br>
-ID<input type = "text" name ="id";>
-<br>
-password<input type = "text" name ="password";>
-<br>
-e-mail<input type = "text" name ="email";>
-<input type ="submit" name ="to-roku" value="登録";>
-</FORM>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  </head>
+  <FORM action="adminp.php" method="post">
+    <title>楽天　スノーボードレンタルサイト　登録用</title>
+    <b>楽天　スノーボードレンタルサイト　登録用(個人)</b>
+    <br>
+    個人名<input type = "text" name ="name";>
+    <br>
+    ID<input type = "text" name ="id";>
+    <br>
+    password<input type = "text" name ="password";>
+    <br>
+    e-mail<input type = "text" name ="email";>
+    <input type ="submit" name ="to-roku" value="登録";>
+  </FORM>
 </HTML>
