--- a/mail/advertising.html
+++ b/mail/advertising.html
@@ -28,7 +28,7 @@
     <table>
       <tr>
 	<th bgcolor="dc143c"><font color="e6e6fa">新規登録の方はこちらから</font></th>
-	<td bgcolor="ffd700"><a href="https://blooming-dawn-8215.herokuapp.com/rental/adminp.html">会員登録</a></td>
+	<td bgcolor="ffd700"><a href="https://blooming-dawn-8215.herokuapp.com/adminp.html">会員登録</a></td>
       </tr>
       <tr>
 	<th bgcolor="dc143c"><font color="e6e6fa">既に会員の方はこちらから</font></th>
