--- a/mail/advertising.html
+++ b/mail/advertising.html
@@ -20,6 +20,29 @@
     会員登録後に身長などの個人情報をレンタル用具と合わせて入力する事で、ウェアやボードなどのサイズをレンタル店が事前に把握、準備する事ができます。</br>
     個人情報は入力した本人しか見られる事はなく、レンタル店には個人情報を基にしたサイズの情報のみが送られます。</br>
     </div>
+
+    <font color="66cdaa">
+    <h2 style = "font-size: 19px; font-weight: bold;">こんなことありませんか？</h2>
+    </font>
+    <div style="padding: 10px; margin-bottom: 10px; border: 1px solid #333333; background-color: #f5f5dc;">
+      <font color="f08080">
+      ・日帰りでスキー旅行にきたのに、レンタルで時間がかかる
+      ・正確なサイズを言いたくなくて、記入欄に嘘を書く・もはや書かない
+      </font>
+    </div>
+
+    <font color="008080">
+    <h2 style = "font-size: 22px; font-weight: bold;">楽天レンタルならその問題を解決出来ます!!</h2>
+    </font>
+    <div style="padding: 10px; margin-bottom: 10px; border: 1px solid #333333; background-color: #f5f5dc;">
+      <font color="ff4500">
+	・個人情報登録機能・・・身長や体重など、知られたくない情報を入力することで、旅先で何度もプライバシーとなる情報を入力する必要がなくなります。</br>
+	　　　　　　　　　　　　入力されたデータをもとにサイズ化してレンタル店に送信するので、レンタル店側に情報が渡る事もありません。</br>
+	・集団申請機能　　・・・出かける前までにレンタル申請が出来る様になったことで、レンタル店が事前に用意をして当日すぐに受け渡しする事が可能になります。</br>
+	　　　　　　　　　　　　持っていない物のみを選択して選べるので、一部のスキー用品を持っている人にも便利です。
+      </font>
+    </div>
+    
     <font color="66cdaa">
     <h2 style = "font-size: 19px; font-weight: bold;">レンタルを利用するには</h2>
     </font>
