--- a/mail/advertising.html
+++ b/mail/advertising.html
@@ -26,8 +26,8 @@
     </font>
     <div style="padding: 10px; margin-bottom: 10px; border: 1px solid #333333; background-color: #f5f5dc;">
       <font color="f08080">
-      ・日帰りでスキー旅行にきたのに、レンタルで時間がかかる
-      ・正確なサイズを言いたくなくて、記入欄に嘘を書く・もはや書かない
+      ・日帰りでスキー旅行にきたのに、レンタルで時間がかかる</br>
+      ・正確なサイズを言いたくなくて、記入欄に嘘を書く・もはや書かない</br>
       </font>
     </div>
 
@@ -35,12 +35,11 @@
     <h2 style = "font-size: 22px; font-weight: bold;">楽天レンタルならその問題を解決出来ます!!</h2>
     </font>
     <div style="padding: 10px; margin-bottom: 10px; border: 1px solid #333333; background-color: #f5f5dc;">
-      <font color="ff4500">
-	・個人情報登録機能・・・身長や体重など、知られたくない情報を入力することで、旅先で何度もプライバシーとなる情報を入力する必要がなくなります。</br>
+
+	・<font color="ff4500">個人情報登録機能</font>・・・身長や体重など、知られたくない情報を入力することで、旅先で何度もプライバシーとなる情報を入力する必要がなくなります。</br>
 	　　　　　　　　　　　　入力されたデータをもとにサイズ化してレンタル店に送信するので、レンタル店側に情報が渡る事もありません。</br>
 	・集団申請機能　　・・・出かける前までにレンタル申請が出来る様になったことで、レンタル店が事前に用意をして当日すぐに受け渡しする事が可能になります。</br>
 	　　　　　　　　　　　　持っていない物のみを選択して選べるので、一部のスキー用品を持っている人にも便利です。
-      </font>
     </div>
     
     <font color="66cdaa">
