--- a/mail/advertising.html
+++ b/mail/advertising.html
@@ -38,7 +38,8 @@
 
 	・<font color="ff4500">個人情報登録機能</font>・・・身長や体重など、知られたくない情報を入力することで、旅先で何度もプライバシーとなる情報を入力する必要がなくなります。</br>
 	　　　　　　　　　　　　入力されたデータをもとにサイズ化してレンタル店に送信するので、レンタル店側に情報が渡る事もありません。</br>
-	・集団申請機能　　・・・出かける前までにレンタル申請が出来る様になったことで、レンタル店が事前に用意をして当日すぐに受け渡しする事が可能になります。</br>
+	</br>
+	・<font color="ff4500">集団申請機能</font>　　・・・出かける前までにレンタル申請が出来る様になったことで、レンタル店が事前に用意をして当日すぐに受け渡しする事が可能になります。</br>
 	　　　　　　　　　　　　持っていない物のみを選択して選べるので、一部のスキー用品を持っている人にも便利です。
     </div>
     
