--- a/personalinform/personalinfo.html
+++ b/personalinform/personalinfo.html
@@ -1,11 +1,13 @@
 <?php
 session_start();
+
+var_dump($_SESSION["personal_id"])
 ?>
 
 <html lang = "ja">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>個人情報入力ページ<?php echo $_SESSION["personal_id"]; ?></title>
+    <title>個人情報入力ページ</title>
   </head>
 
   <body bgcolor="#fffacd  " TEXT="#333333  " LINK="#3333cc  ">
