--- a/mail/mailform.html
+++ b/mail/mailform.html
@@ -21,18 +21,6 @@
 		                  <input type="text" name="mail_1" size="30">
 		              </td>
 	                  </tr>
-	      <!--<tr>
-		              <td style="background-color: #eeeeee  ;"></td>
-		              <td style="background-color: #ffffff  ;">
-		                  <input type="text" name="mail_2" size="30">
-		              </td>
-	                  </tr>
-	      <tr>
-		              <td style="background-color: #eeeeee  ;"></td>
-		              <td style="background-color: #ffffff  ;">
-		                  <input type="text" name="mail_3" size="30">
-		              </td>
-	                  </tr>-->
 	              </table>
 	          </td>
 	      </tr>
@@ -48,23 +36,12 @@
 		                <input type="text" name="conf_mail_1" size="30">
 	                    </td>
 	                </tr>
-<!--	    <tr>
-	                    <td style="background-color: #eeeeee  ;"></td>
-	                    <td style="background-color: #ffffff  ;">
-		                <input type="text" name="conf_mail_2"  size="30">
-	                    </td>
-	                </tr>
-	    <tr>
-	                    <td style="background-color: #eeeeee  ;"></td>
-	                    <td style="background-color: #ffffff  ;">
-		                <input type="text" name="conf_mail_3"  size="30">
-	                    </td>
-	                </tr>-->
 	            </table>
 	        </td>
             </tr>
         </table>
-        <br> <input type="submit" name="send" value="送信">
+        <br> <input type="submit" name="send" value="送信" style="WIDHT: 50px;HEIGHT: 30px">
       </form>
+    <a href="https://blooming-dawn-8215.herokuapp.com/adminp.html">TOPに戻る</a>
   </body>
   </html>
