--- a/mail/mailform.html
+++ b/mail/mailform.html
@@ -4,7 +4,7 @@
     <title> 招待ページ</title>
   </head>
   
-  <body bgcolor="#fffacd  " TEXT="#333333  " LINK="#3333cc  ">
+  <body bgcolor="#ffffff  " TEXT="#333333  " LINK="#3333cc  ">
     <!-- タイトル -->
     <h1 style = "font-size: 16px; font-weight: bold;">招待ページ</h1>
     <!-- タイトル -->
