--- a/mail/advertising.html
+++ b/mail/advertising.html
@@ -51,7 +51,7 @@
       </tr>
       <tr>
 	<th bgcolor="dc143c"><font color="e6e6fa">既に会員の方はこちらから</font></th>
-	<td bgcolor="ffd700"><a href="https://blooming-dawn-8215.herokuapp.com/register/loginp.html">ログインページ</a></td>
+	<td bgcolor="ffd700"><a href="../register/loginp.html">ログインページ</a></td>
       </tr>
     </table>
     </div>
