change update sql

--- a/register/adminp.html
+++ b/register/adminp.html
@@ -1,6 +1,9 @@
+<?php
+header("Content-type: text/html; charset=utf-8");
+?>
 <HTML>
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
   </head>
   <FORM action="adminp.php" method="post">
     <title>楽天　スノーボードレンタルサイト　登録用</title>
