change update sql

--- a/register/loginp.html
+++ b/register/loginp.html
@@ -6,6 +6,9 @@ if($_SESSION["personal_id"]){
 }
 ?>
 <HTML>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  </head>
 <FORM action="confirmp.php" method="post">
   <title>楽天　スノーボードレンタルサイト　ログイン</title>
   <b>楽天　スノーボードレンタルサイト　ログイン（個人）</b>
