--- a/mail/advertising.html
+++ b/mail/advertising.html
@@ -54,19 +54,24 @@
     <font color="66cdaa">
     <h2 style = "font-size: 19px; font-weight: bold;">レンタルを利用するには</h2>
     </font>
-    <div style="padding: 10px; margin-bottom: 10px; border: 1px solid #333333; background-color: #f5f5dc;">
-    以下のサイトより必要事項の記入を行ってください。<br>
-    <table>
-      <tr>
-	<th bgcolor="dc143c"><font color="e6e6fa">新規登録の方はこちらから</font></th>
-	<td bgcolor="ffd700"><a href="../adminp.html">会員登録</a></td>
-      </tr>
-      <tr>
-	<th bgcolor="dc143c"><font color="e6e6fa">既に会員の方はこちらから</font></th>
-	<td bgcolor="ffd700"><a href="../register/loginp.html">ログインページ</a></td>
-      </tr>
-    </table>
-    </div>
+      以下のサイトより必要事項の記入を行ってください。<br>
+      <div class="container">
+	<table class="table table-striped">
+	  <thead>
+	    <tr>
+	      <th>新規登録の方はこちらから</th>
+	      <th>既に会員の方はこちらから</th>
+	    </tr>
+	  </thead>
+	  <tbody>
+	    <tr>
+	      <td><a href="../adminp.html">会員登録</a></td>
+	      <td><a href="../register/loginp.html">ログインページ</a></td>
+	    </tr>
+	  </tbody>
+	</table>
+	</div>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
