--- a/mail/advertising.html
+++ b/mail/advertising.html
@@ -56,7 +56,7 @@
     </font>
       以下のサイトより必要事項の記入を行ってください。<br>
       <div class="container">
-	<table class="table table-striped">
+	<table class="table table-striped table-bordered table-hover">
 	  <thead>
 	    <tr>
 	      <th>新規登録の方はこちらから</th>
