--- a/register/adminp.html
+++ b/register/adminp.html
@@ -1,6 +1,6 @@
 <HTML>
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   </head>
   <FORM action="adminp.php" method="post">
     <title>楽天　スノーボードレンタルサイト　登録用</title>
